tests/NormalTests/paczka1/fuzzy1/14142397.err
Error in line 6: vm9XBJgOZ A379 69,4
Error in line 22: nIVqLS3s S858 -4,44
Error in line 17: vm9XBJgOZ A948 93,8
Error in line 36: i9q A379 98,82
